--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "^12.1.7-canary.3",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-icons": "^4.3.1",
     "sass": "^1.51.0"
   },
   "devDependencies": {
